[package]
name = "loa-tts"
version = "0.1.0"
authors = ["Oskar Thornblad <oskar.thornblad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tts = { git = "https://github.com/prewk/tts-rs", branch = "arm" }
bevy = "0.4"
